# orka

./: .dockerignore  .drone.yml  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .public-api-baseline.txt  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  GEMINI.md  HEARTBEAT.md  IDENTITY.md  Justfile  LICENSE  LICENSE-APACHE  MEMORY.md  PKGBUILD  README.md  SECURITY.md  SOUL.md  TOOLS.md  bacon.toml  cliff.toml  deny.toml  docker-compose.override.yml  docker-compose.yml  orka.toml  release.toml
crates/orka-a2a/: Cargo.toml
crates/orka-a2a/src/: agent_card.rs  config.rs  discovery.rs  error.rs  jsonrpc.rs  lib.rs  push_store.rs  routes.rs  store.rs  types.rs  webhook.rs
crates/orka-a2a/src/snapshots/: orka_a2a__types__tests__agent_card.snap  orka_a2a__types__tests__task.snap
crates/orka-a2a/tests/: a2a_test.rs
crates/orka-adapter-custom/: Cargo.toml
crates/orka-adapter-custom/src/: config.rs  lib.rs  routes.rs  types.rs  ws.rs
crates/orka-adapter-custom/tests/: adapter_test.rs
crates/orka-adapter-discord/: Cargo.toml
crates/orka-adapter-discord/src/: api.rs  config.rs  gateway.rs  lib.rs  types.rs
crates/orka-adapter-discord/tests/: adapter_test.rs
crates/orka-adapter-telegram/: Cargo.toml  README.md
crates/orka-adapter-telegram/src/: api.rs  config.rs  lib.rs  markdown.rs  media.rs  polling.rs  types.rs  webhook.rs
crates/orka-adapter-telegram/tests/: adapter_test.rs
crates/orka-adapter-whatsapp/: Cargo.toml
crates/orka-adapter-whatsapp/src/: api.rs  config.rs  lib.rs  types.rs  webhook.rs
crates/orka-adapter-whatsapp/tests/: adapter_test.rs
crates/orka-agent/: Cargo.toml
crates/orka-agent/src/: agent.rs  budget.rs  config.rs  context.rs  context_adapters.rs  executor.rs  graph.rs  handoff.rs  lib.rs  node_runner.rs  planner.rs  progress_bridge.rs  reducer.rs  tools.rs
crates/orka-agent/tests/: graph_executor_test.rs
crates/orka-auth/: Cargo.toml
crates/orka-auth/src/: api_key.rs  authenticator.rs  config.rs  jwt.rs  lib.rs  middleware.rs  testing.rs  types.rs
crates/orka-auth/tests/: middleware_test.rs
crates/orka-bus/: Cargo.toml
crates/orka-bus/src/: config.rs  lib.rs  nats.rs  redis_bus.rs
crates/orka-bus/tests/: bus_test.rs
crates/orka-chart/: Cargo.toml
crates/orka-chart/src/: config.rs  lib.rs  render.rs  skill.rs  types.rs
crates/orka-checkpoint/: Cargo.toml
crates/orka-checkpoint/src/: lib.rs  redis_store.rs  store.rs  types.rs
crates/orka-checkpoint/tests/: in_memory_store_test.rs
crates/orka-circuit-breaker/: Cargo.toml
crates/orka-circuit-breaker/src/: lib.rs
crates/orka-circuit-breaker/tests/: circuit_breaker_test.rs
crates/orka-cli/: Cargo.toml  build.rs
crates/orka-cli/src/: chat_renderer.rs  client.rs  completion.rs  main.rs  markdown.rs  media.rs  prompt.rs  protocol.rs  shell.rs  table.rs  term_caps.rs  util.rs  workspace.rs
crates/orka-cli/src/cmd/: a2a.rs  chat.rs  config.rs  dashboard.rs  dlq.rs  experience.rs  graph.rs  health.rs  init.rs  mcp_serve.rs  (+16 more)
crates/orka-coding/: Cargo.toml
crates/orka-coding/src/: config.rs  lib.rs  skill.rs  stream.rs
crates/orka-config/: Cargo.toml  README.md
crates/orka-config/src/: lib.rs  migrate.rs  runtime.rs  subsystem_config.rs
crates/orka-contracts/: Cargo.toml
crates/orka-contracts/src/: .event.rs.pending-snap  event.rs  interaction.rs  lib.rs  platform.rs
crates/orka-conversation/: Cargo.toml
crates/orka-conversation/src/: lib.rs  redis_store.rs
crates/orka-core/: Cargo.toml  README.md
crates/orka-core/src/: config.rs  container.rs  conversation_controller.rs  error.rs  lib.rs  migrate.rs  progress_bridge.rs  retry.rs  slash_command.rs  stream.rs  testing.rs  traits.rs  types.rs  util.rs
crates/orka-core/tests/: types_test.rs
crates/orka-eval/: Cargo.toml  README.md
crates/orka-eval/src/: assertion.rs  error.rs  lib.rs  llm_judge.rs  report.rs  runner.rs  scenario.rs
crates/orka-eval/tests/: eval_test.rs
crates/orka-experience/: Cargo.toml
crates/orka-experience/src/: collector.rs  config.rs  distiller.rs  lib.rs  reflector.rs  service.rs  store.rs  trajectory_store.rs  types.rs  utils.rs
crates/orka-experience/tests/: experience_test.rs
crates/orka-gateway/: Cargo.toml  README.md
crates/orka-gateway/src/: config.rs  lib.rs
crates/orka-gateway/tests/: gateway_dedup_test.rs  gateway_redis_test.rs  gateway_test.rs
crates/orka-git/: Cargo.toml
crates/orka-git/src/: cli.rs  config.rs  error.rs  guard.rs  lib.rs  repo.rs  worktree.rs
crates/orka-guardrails/: Cargo.toml
crates/orka-guardrails/src/: chain.rs  code_filter.rs  config.rs  keyword.rs  lib.rs  llm_moderation.rs  prompt_injection.rs  regex_filter.rs
crates/orka-guardrails/tests/: guardrail_tests.rs
crates/orka-http/: Cargo.toml
crates/orka-http/src/: config.rs  guard.rs  lib.rs
crates/orka-http/tests/: http_test.rs
crates/orka-infra/: Cargo.toml
crates/orka-infra/src/: lib.rs  retry.rs
crates/orka-infra/tests/: bus_test.rs  queue_test.rs  secret_test.rs  session_config_test.rs  session_test.rs
crates/orka-knowledge/: Cargo.toml
crates/orka-knowledge/src/: chunking.rs  config.rs  fact_store.rs  lib.rs  types.rs
crates/orka-knowledge/tests/: qdrant_test.rs
crates/orka-llm/: Cargo.toml  README.md
crates/orka-llm/src/: anthropic.rs  client.rs  config.rs  context.rs  error.rs  lib.rs  ollama.rs  openai.rs  router.rs  stream_consumer.rs  swappable.rs  testing.rs
crates/orka-mcp/: Cargo.toml
crates/orka-mcp/src/: bridge.rs  client.rs  config.rs  http_transport.rs  lib.rs  oauth.rs  server.rs  transport.rs
crates/orka-mcp/tests/: mcp_tests.rs  server_test.rs
crates/orka-memory/: Cargo.toml
crates/orka-memory/src/: config.rs  lib.rs  redis_store.rs
crates/orka-memory/tests/: in_memory_store_test.rs  memory_test.rs
orka-server/: Cargo.toml  build.rs
orka-server/src/: env_watcher.rs  lib.rs  main.rs  router.rs
orka-server/tests/: api_auth.rs  api_health.rs  api_management.rs  api_roundtrip.rs  e2e_flow.rs
orka-server/tests/common/: mod.rs
(+438 files in other folders)
