[workspace]
resolver = "2"
members = [
  "crates/orka-core",
  "crates/orka-bus",
  "crates/orka-auth",
  "crates/orka-session",
  "crates/orka-queue",
  "crates/orka-worker",
  "crates/orka-sandbox",
  "crates/orka-gateway",
  "crates/orka-workspace",
  "crates/orka-memory",
  "crates/orka-secrets",
  "crates/orka-observe",
  "crates/orka-skills",
  "crates/orka-llm",
  "crates/orka-mcp",
  "crates/orka-adapter-telegram",
  "crates/orka-adapter-discord",
  "crates/orka-adapter-whatsapp",
  "crates/orka-adapter-slack",
  "crates/orka-adapter-custom",
  "crates/orka-guardrails",
  "crates/orka-circuit-breaker",
  "crates/orka-a2a",
  "crates/orka-wasm",
  "crates/orka-web",
  "crates/orka-os",
  "crates/orka-http",
  "crates/orka-knowledge",
  "crates/orka-scheduler",
  "crates/orka-experience",
  "crates/orka-agent",
  "crates/orka-eval",
  "crates/orka-cli",
  "orka-server",
  "sdk/orka-plugin-sdk",
  "sdk/orka-plugin-sdk-component",
  "sdk/hello-plugin",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.85"
repository = "https://github.com/gianlucamazza/orka"
homepage = "https://github.com/gianlucamazza/orka"
keywords = ["ai", "agent", "orchestration", "llm", "rust"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "time",
  "signal",
  "sync",
  "fs",
  "process",
] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Config
config = "0.14"
serde_yml = "0.0.12"
dotenvy = "0.15"

# Concurrency
arc-swap = "1"

# Filesystem
notify = { version = "7", default-features = false, features = [
  "macos_kqueue",
] }
tempfile = "3"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
deadpool-redis = "0.18"

# Testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
proptest = "1"
insta = { version = "1", features = ["json", "yaml"] }

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "limit",
  "set-header",
] }
governor = "0.8"
tower-layer = "0.3"
tower-service = "0.3"
http = "1"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Crypto
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rustyline = "15"
colored = "3"
comfy-table = "7"
dialoguer = "0.11"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
arboard = "3"
notify-rust = "4"
open = "5"

# WASM
cap-std = "3"
wasmtime = { version = "42", features = ["component-model"] }
wasmtime-wasi = "42"
wit-bindgen = "0.51"

# JWT
jsonwebtoken = "9"

# Regex
regex = "1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# JSON Schema validation
jsonschema = "0.28"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Web scraping
scraper = "0.22"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"

# Internal crates
orka-core = { path = "crates/orka-core" }
orka-bus = { path = "crates/orka-bus" }
orka-auth = { path = "crates/orka-auth" }
orka-session = { path = "crates/orka-session" }
orka-queue = { path = "crates/orka-queue" }
orka-worker = { path = "crates/orka-worker" }
orka-sandbox = { path = "crates/orka-sandbox" }
orka-gateway = { path = "crates/orka-gateway" }
orka-workspace = { path = "crates/orka-workspace" }
orka-memory = { path = "crates/orka-memory" }
orka-secrets = { path = "crates/orka-secrets" }
orka-observe = { path = "crates/orka-observe" }
orka-skills = { path = "crates/orka-skills" }
orka-adapter-telegram = { path = "crates/orka-adapter-telegram" }
orka-adapter-discord = { path = "crates/orka-adapter-discord" }
orka-adapter-whatsapp = { path = "crates/orka-adapter-whatsapp" }
orka-adapter-slack = { path = "crates/orka-adapter-slack" }
orka-adapter-custom = { path = "crates/orka-adapter-custom" }
orka-llm = { path = "crates/orka-llm" }
orka-guardrails = { path = "crates/orka-guardrails" }
orka-circuit-breaker = { path = "crates/orka-circuit-breaker" }
orka-mcp = { path = "crates/orka-mcp" }
orka-a2a = { path = "crates/orka-a2a" }
orka-wasm = { path = "crates/orka-wasm" }
orka-cli = { path = "crates/orka-cli" }
orka-web = { path = "crates/orka-web" }
orka-os = { path = "crates/orka-os" }
orka-http = { path = "crates/orka-http" }
orka-knowledge = { path = "crates/orka-knowledge" }
orka-scheduler = { path = "crates/orka-scheduler" }
orka-experience = { path = "crates/orka-experience" }
orka-eval = { path = "crates/orka-eval" }
orka-agent = { path = "crates/orka-agent" }
orka-plugin-sdk = { path = "sdk/orka-plugin-sdk" }

# Knowledge & RAG
qdrant-client = "1"
fastembed = "5"
text-splitter = { version = "0.16", features = ["tiktoken-rs"] }
tiktoken-rs = "0.6"
pdf-extract = "0.7"

# Scheduler
cron = "0.13"

# Config migration
toml_edit = "0.22"
similar = "2"

# Markdown parsing
pulldown-cmark = "0.12"

# URL parsing
url = "2"

# OS integration
sysinfo = "0.33"
glob = "0.3"
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
