[package]
name = "orka-a2a"
description = "Google A2A (Agent-to-Agent) protocol implementation for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
orka-skills.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
reqwest.workspace = true
utoipa.workspace = true

[dev-dependencies]
orka-core.workspace = true
orka-skills.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
axum = { workspace = true }
tower = { workspace = true }
http.workspace = true

[lints]
workspace = true
