[package]
name = "orka-adapter-discord"
description = "Discord adapter for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
serde_json.workspace = true
