[package]
name = "orka-adapter-discord"
description = "Discord adapter for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-tungstenite = { workspace = true }
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
serde_json.workspace = true

[lints]
workspace = true
