[package]
name = "orka-adapter-telegram"
description = "Telegram adapter for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
orka-contracts.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json.workspace = true

[lints]
workspace = true
