[package]
name = "orka-adapter-whatsapp"
description = "WhatsApp adapter for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
serde_json.workspace = true

[lints]
workspace = true
