[package]
name = "orka-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
orka-core = { workspace = true }
orka-llm = { workspace = true }
orka-skills = { workspace = true }
orka-experience = { workspace = true }
orka-workspace = { workspace = true }
orka-guardrails = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
