[package]
name = "orka-agent"
description = "Agent orchestration, multi-agent graph execution, and tool dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
orka-core = { workspace = true }
orka-config = { workspace = true }
orka-llm = { workspace = true }
orka-skills = { workspace = true }
orka-experience = { workspace = true }
orka-knowledge = { workspace = true }
orka-workspace = { workspace = true }
orka-guardrails = { workspace = true }
orka-prompts = { workspace = true }
orka-checkpoint = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
orka-core = { workspace = true }
orka-llm = { workspace = true }
orka-skills = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
