[package]
name = "orka-auth"
description = "Auth gateway for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-util = []

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2 = { workspace = true }
axum.workspace = true
tower.workspace = true
tower-layer.workspace = true
tower-service.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
