[package]
name = "orka-bus"
description = "Message bus abstraction for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
orka-test-support.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
