[package]
name = "orka-checkpoint"
description = "Graph execution checkpointing and crash recovery for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
orka-core = { workspace = true }
orka-llm = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
orka-test-support.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
