[package]
name = "orka-cli"
description = "CLI dev/ops tool for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orka"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
orka-core.workspace = true
orka-mcp.workspace = true
orka-secrets.workspace = true
orka-skills.workspace = true
orka-wasm.workspace = true
similar = { workspace = true }
colored.workspace = true
dirs = "6"
rustyline = "17"
indicatif = "0.18"
tokio-tungstenite.workspace = true
futures-util.workspace = true
uuid.workspace = true
syntect = { version = "5", default-features = false, features = [
  "default-fancy",
] }
pulldown-cmark.workspace = true
tempfile.workspace = true
sha2.workspace = true
hex.workspace = true
unicode-width = "0.2"
comfy-table.workspace = true
dialoguer.workspace = true
ratatui.workspace = true
crossterm.workspace = true
arboard.workspace = true
notify-rust.workspace = true
open.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
