[package]
name = "orka-cli"
description = "CLI dev/ops tool for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orka"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = ["dep:orka-wasm", "orka-skills/wasm"]

[dependencies]
clap = { workspace = true, features = ["env"] }
clap_complete.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
orka-core.workspace = true
orka-config.workspace = true
orka-llm.workspace = true
orka-mcp.workspace = true
orka-secrets.workspace = true
orka-skills.workspace = true
orka-wasm = { workspace = true, optional = true }
similar = { workspace = true }
colored.workspace = true
dirs = "6"
reedline = "0.46"
nu-ansi-term = "0.50"
indicatif = "0.17"
tokio-tungstenite.workspace = true
futures-util.workspace = true
uuid.workspace = true
base64.workspace = true
viuer = "0.9"
image = { workspace = true, features = ["png", "jpeg"] }
syntect = { version = "5", default-features = false, features = [
  "default-fancy",
] }
pulldown-cmark.workspace = true
tempfile.workspace = true
sha2.workspace = true
hex.workspace = true
unicode-width = "0.2"
comfy-table.workspace = true
dialoguer.workspace = true
ratatui.workspace = true
crossterm.workspace = true
arboard.workspace = true
notify-rust.workspace = true
open.workspace = true
async-trait.workspace = true
toml.workspace = true
toml_edit.workspace = true
regex.workspace = true
redis.workspace = true
qdrant-client.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
